prevented numbers from overflowing

--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ html{
     align-items: center;
     justify-content: center;
     background-color: rgb(211, 211, 211);
-    font-size: large;
+    font-size: 3vh;
     font-weight: bold;
 }
 
